fix(MenuItem): 修复渲染为a标签时没有文本溢出的问题、collapsed时a标签覆盖范围未铺满按钮的问题

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -147,6 +147,7 @@ a.@{prefix}-menu__item {
         justify-content: center;
 
         .@{prefix}-menu__item-link {
+          margin-left: 0;
           opacity: 0;
           content: "";
           position: absolute;
@@ -567,6 +568,9 @@ a.@{prefix}-menu__item {
 
       &.@{prefix}-menu__item-link {
         color: unset;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
 
         &::before {
           content: "";
